<resources>
    <string name="app_name">QQ</string>
    <string name="send">Send</string>
    <string name="contacts">contacts</string>
    <string name="type_something_here">type_something</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="login_to_continue">Login to continue</string>
    <string name="add_image">Add Image</string>
    <string name="username">username:</string>
    <string name="password">password:</string>
    <string name="confirm_password">confirm password:</string>
    <string name="register">register</string>
    <string name="log_in">Log in</string>
    <string name="create_new_account">Create New Account</string>
    <string name="title_activity_home_page">HomePageActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


</resources>