<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RegisterActivity"
    android:padding="10dp"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/primary"
        android:text="@string/create_new_account"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/heading"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/_20sdp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_to_continue"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/normal_text"
        android:layout_marginVertical="@dimen/_10sdp"
        />

    <FrameLayout
        android:id="@+id/layout_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        >

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/image_profile"
            android:layout_width="@dimen/_70sdp"
            android:layout_height="@dimen/_70sdp"
            android:src="@drawable/background_image"
            app:riv_oval="true"
            android:scaleType="centerCrop"
            />

        <TextView
            android:id="@+id/add_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_image"
            android:layout_gravity="center" />

    </FrameLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/username"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/username_input"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textSize="20sp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="email: "
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/email_input"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textSize="20sp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/password"
            android:layout_height="wrap_content" />

        <EditText android:id="@+id/password_input"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/confirm_password"
            android:layout_height="wrap_content" />

        <EditText android:id="@+id/confirm_password"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            />
    </LinearLayout>


    <FrameLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/register_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/register"
            android:enabled="false"
            android:textStyle="bold"
            />
        <ProgressBar
            android:id="@+id/prgressBar"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_gravity="center"
            android:visibility="invisible"
            >

        </ProgressBar>
    </FrameLayout>


    <TextView
        android:id="@+id/back_to_login"
        android:textColor="@color/primary"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:layout_gravity="center_horizontal"
        android:textSize="18sp"
        android:layout_marginTop="50dp"
        />

</LinearLayout>